best-practices/disallow_default_namespace/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow_default_namespace.yaml
assert:
- policy-assert.yaml
