best-practices/disallow_default_namespace/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' disallow_default_namespace.yaml | kubectl create -f -
