best-practices/disallow_default_namespace/e2e/03-enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
spec:
  validationFailureAction: enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
