best-practices/disallow_default_namespace/e2e/03-resource-1-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  name: cpol-disallow-default-namespace
  namespace: default
# results:
# - policy: disallow-container-sock-mounts
#   result: pass
#   rule: validate-containerd-sock-mount
#   resources:
#     - apiVersion: v1
#       kind: Pod
#       name: pod-with-docker-sock-mount
#       namespace: default
# - policy: disallow-container-sock-mounts
#   result: pass
#   rule: validate-crio-sock-mount
#   resources:
#     - apiVersion: v1
#       kind: Pod
#       name: pod-with-docker-sock-mount
#       namespace: default
# - policy: disallow-container-sock-mounts
#   result: fail
#   rule: validate-docker-sock-mount
#   resources:
#     - apiVersion: v1
#       kind: Pod
#       name: pod-with-docker-sock-mount
#       namespace: default
